objects/Net_Worth__c.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Email</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NetWorth</relationshipLabel>
        <relationshipName>NetWorth</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Name, First Name</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NetWorth (Account Name)</relationshipLabel>
        <relationshipName>NetWorth1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annuities__c</fullName>
        <label>Annuities</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appliances_and_Furniture__c</fullName>
        <label>Appliances and Furniture</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Loans__c</fullName>
        <label>Auto Loans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Automobiles__c</fullName>
        <label>Automobiles</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Back_Taxes__c</fullName>
        <label>Back Taxes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Loan_1__c</fullName>
        <label>Bank Loan 1</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Loan_2__c</fullName>
        <label>Bank Loan 2</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Loan_3__c</fullName>
        <label>Bank Loan 3</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonds__c</fullName>
        <label>Bonds</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>NetWorth</relationshipLabel>
        <relationshipName>NetWorth</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_On_Hand__c</fullName>
        <label>Cash On Hand</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Value_of_Life_Insurance__c</fullName>
        <label>Cash Value of Life Insurance</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certificates_of_Deposit__c</fullName>
        <label>Certificates of Deposit</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Checking_Account__c</fullName>
        <label>Checking Account</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <externalId>true</externalId>
        <label>Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collectables__c</fullName>
        <label>Collectables</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Debts__c</fullName>
        <label>Credit Card Debts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Net_Worth_Statement__c</fullName>
        <label>Date of Net Worth Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Credit_Cards__c</fullName>
        <label>Department Credit Cards</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMail__c</fullName>
        <label>EMail</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Loans__c</fullName>
        <label>Education Loans</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Furnishings__c</fullName>
        <label>Home Furnishings</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <description>Household Debts</description>
        <label>Household</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IRAs__c</fullName>
        <label>IRAs</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investment_RE_1__c</fullName>
        <label>Investment RE 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investment_RE_2__c</fullName>
        <label>Investment RE 2</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investment_RE_3__c</fullName>
        <label>Investment RE 3</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jewelry__c</fullName>
        <label>Jewelry</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Loans__c</fullName>
        <label>Life Insurance Loans</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Debts__c</fullName>
        <label>Medical Debts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Money_Market_Funds__c</fullName>
        <label>Money Market Funds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_Investment_Properties__c</fullName>
        <description>Total of all investment property mortgages</description>
        <label>Mortgage Investment Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_Primary_Residence__c</fullName>
        <label>Mortgage Primary Residence</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mutual_Funds__c</fullName>
        <label>Mutual Funds</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Loan_1__c</fullName>
        <label>Other Loan 1</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Loan_2__c</fullName>
        <label>Other Loan 2</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension__c</fullName>
        <label>Pension</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Loans__c</fullName>
        <label>Personal Loans</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_First_Name__c</fullName>
        <label>Primary First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Last_Name__c</fullName>
        <label>Primary Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <label>Primary Residence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recreational_Vehicle_Loans__c</fullName>
        <label>Recreational Vehicle Loans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recreational_Vehicles__c</fullName>
        <label>Recreational Vehicles</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Savings_Accounts__c</fullName>
        <label>Savings Accounts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stocks__c</fullName>
        <label>Stocks</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Liabilities__c</fullName>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Worth__c</fullName>
        <label>Total Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Assets__c</fullName>
        <label>Total Other Assets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Person_First_Name__c</fullName>
        <label>2nd Person First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Person_Last_Name__c</fullName>
        <label>2nd Person Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X401k_403b_457_Plans__c</fullName>
        <label>401k 403b 457 Plans</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Net-Worth</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Net-Worth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetWorth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>